[package]
name = "proxee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
serde_derive = "1.0.194"
serde = "1.0.194"
toml = "0.8.8"
rand = "0.8.5"
metrics = "0.17"
metrics-exporter-prometheus = "0.6"
warp = "0.3.6"
plotters = "0.3.5"
prometheus = "0.13.3"
